--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="google-signin-client_id" content="85214789295-vvmbdtnt433opvfrta4bo99botregnfr.apps.googleusercontent.com"/>
+    <meta name="google-signin-scope" content="profile email"/>
+  <script>navigator.serviceWorker.register("service-worker.js")</script> 
+  <link rel="manifest" href="manifest.json" />  <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
